--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {
         "id": "k5JCF-LPtDiU"
       },
@@ -29,37 +29,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "1JjpGNnptEQF",
-        "outputId": "53fafe37-7017-4701-8c68-62881e2e5381"
+        "id": "DOX_-zqtDMlf",
+        "outputId": "13e6dc08-60ac-47a3-e61f-a1ab72e7cb3c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')\n",
         "DATA_PATH = './data/ctl/'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "r8eUSan0tDiV",
-        "outputId": "b4a8aa1e-991c-4c1f-b2f3-23c7c81b625e"
+        "outputId": "850e0ac8-283c-4fed-c120-fede36aab23c"
       },
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "device(type='cpu')"
+              "device(type='cuda')"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -71,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 5,
       "metadata": {
         "id": "B757F0dntDiW"
       },
@@ -128,6 +138,15 @@
         "        bbox = [float(x) for x in row['bbox'][1:-1].split(',')]\n",
         "        cropped_scene_img = self._crop_img(scene_img, bbox)\n",
         "\n",
+        "        if min(cropped_scene_img.size) == 0:\n",
+        "          row = self.data.iloc[0]\n",
+        "\n",
+        "          scene_img = self.get_image(row['scene_id'])\n",
+        "          product_img = self.get_image(row['product_id'])\n",
+        "          bbox = [float(x) for x in row['bbox'][1:-1].split(',')]\n",
+        "          cropped_scene_img = self._crop_img(scene_img, bbox)\n",
+        "\n",
+        "\n",
         "        if self.transform:\n",
         "            scene_img = self.transform(scene_img)\n",
         "            product_img = self.transform(product_img)\n",
@@ -139,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 6,
       "metadata": {
         "id": "jpSsfstptDiX"
       },
@@ -151,20 +170,21 @@
         "        self.feature_extractor = feature_extractor\n",
         "\n",
         "        # two layer feed forward network to tranform features into d-dim embedding with unit length\n",
+        "        # Linear-BN-Relu-Dropout-Linear-Norm\n",
         "        self.feed_forward = torch.nn.Sequential(\n",
         "            torch.nn.Linear(1000, embed_dim),\n",
-        "            torch.nn.BatchNorm1d(embed_dim),\n",
+        "            # torch.nn.BatchNorm1d(embed_dim),\n",
         "            torch.nn.ReLU(),\n",
         "            torch.nn.Dropout(0.2),\n",
         "            torch.nn.Linear(embed_dim, embed_dim),\n",
-        "            torch.nn.BatchNorm1d(embed_dim),\n",
+        "            # torch.nn.BatchNorm1d(embed_dim),\n",
         "            torch.nn.ReLU(),\n",
         "        )\n",
         "        self.feed_forward.to(device)\n",
         "\n",
         "        self.attention_mechanism = attention_mechanism\n",
         "        self.attention_mechanism.to(device)\n",
-        "        \n",
+        "\n",
         "        self.similarity = similarity\n",
         "\n",
         "    def forward(self, scene_img, product_img, category, verbose=False):\n",
@@ -216,11 +236,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 7,
       "metadata": {
-        "id": "K-BlkDadtDiY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K-BlkDadtDiY",
+        "outputId": "ff5f6a77-8147-4408-b06b-d4b88001fec0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Downloading: \"https://download.pytorch.org/models/resnet50-11ad3fa6.pth\" to /root/.cache/torch/hub/checkpoints/resnet50-11ad3fa6.pth\n",
+            "100%|██████████| 97.8M/97.8M [00:01<00:00, 102MB/s]\n"
+          ]
+        }
+      ],
       "source": [
         "# load pretrained resnet50 for feature extraction\n",
         "resnet = resnet50(weights=ResNet50_Weights.IMAGENET1K_V2)\n",
@@ -231,8 +264,8 @@
         "\n",
         "\n",
         "transform = transforms.Compose([\n",
+        "    transforms.Lambda(lambda x: x.convert(\"RGB\")),\n",
         "    transforms.Resize(320,\n",
-        "                    #   interpolation=Image.NEAREST,\n",
         "                      antialias=True),\n",
         "    transforms.CenterCrop(288),\n",
         "    transforms.ToTensor(),\n",
@@ -261,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "metadata": {
         "id": "XnVh42MRtDiY"
       },
@@ -272,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 9,
       "metadata": {
         "id": "mxXydqK7tDiY"
       },
@@ -290,34 +323,21 @@
         "positive_dataset = CTLData(positive_df, transform)\n",
         "negative_dataset = CTLData(negative_df, transform)\n",
         "\n",
-        "positive_loader = DataLoader(positive_dataset, batch_size=1, shuffle=True)\n",
-        "negative_loader = DataLoader(negative_dataset, batch_size=1, shuffle=True)"
+        "positive_loader = DataLoader(positive_dataset, batch_size=16, shuffle=True)\n",
+        "negative_loader = DataLoader(negative_dataset, batch_size=16, shuffle=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         },
         "id": "pdTf1DWCtDiY",
-        "outputId": "f6f55773-809a-4530-a523-980c97bbac6f"
+        "outputId": "6ac52c01-cb70-41a2-9441-b545794fcd24"
       },
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'positive_loader' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[16], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m i \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_epochs):\n\u001b[1;32m      9\u001b[0m     \u001b[39m# zip the positive and negative loaders to create pairs\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m     \u001b[39mfor\u001b[39;00m (pos_product_img, pos_cropped_scene_img, pos_category, _), (neg_product_img, neg_cropped_scene_img, neg_category, _) \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(tqdm(positive_loader), negative_loader):\n\u001b[1;32m     11\u001b[0m         pos_product_img \u001b[39m=\u001b[39m pos_product_img\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m     12\u001b[0m         pos_cropped_scene_img \u001b[39m=\u001b[39m pos_cropped_scene_img\u001b[39m.\u001b[39mto(device)\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'positive_loader' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
         "\n",
@@ -332,7 +352,7 @@
         "        pos_product_img = pos_product_img.to(device)\n",
         "        pos_cropped_scene_img = pos_cropped_scene_img.to(device)\n",
         "        pos_category = pos_category.to(device)\n",
-        "        \n",
+        "\n",
         "        neg_product_img = neg_product_img.to(device)\n",
         "        neg_cropped_scene_img = neg_cropped_scene_img.to(device)\n",
         "        neg_category = neg_category.to(device)\n",
@@ -344,7 +364,6 @@
         "        # compute hinge loss\n",
         "        # hinge loss is max(0, alpha + pos_output - neg_output)\n",
         "        loss = torch.clamp(alpha + pos_output - neg_output, min=0)\n",
-        "\n",
         "        loss = loss.mean()\n",
         "\n",
         "        # backward and optimize\n",
@@ -352,9 +371,10 @@
         "        loss.backward()\n",
         "        optimizer.step()\n",
         "\n",
-        "        if i % 100 == 0:\n",
-        "            print(f\"Loss: {loss.item():.4f}\")\n",
+        "        if i % 10 == 0:\n",
+        "            print(f\"\\nLoss: {loss.item():.4f}\")\n",
         "            losses.append(loss.item())\n",
+        "        i += 1\n",
         "\n",
         "    print(f'Epoch [{epoch + 1}/{num_epochs}]')\n",
         "    epochs.append(len(losses))\n",
@@ -380,12 +400,13 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
+      "gpuType": "A100",
       "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
-      "language": "python",
       "name": "python3"
     },
     "language_info": {
