add kaggle data link

--- a/prep_data.ipynb
+++ b/prep_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Processing of Shop the Look data into Complete the Look dataset following [Kang et al (2019)](https://arxiv.org/abs/1812.01748)"
+    "Processing of Shop the Look data into Complete the Look dataset following [Kang et al (2019)](https://arxiv.org/abs/1812.01748) data can be found [on Kaggle](https://www.kaggle.com/datasets/kaggleprollc/pinterest-fashion-compatibility-data-ucsd)"
    ]
   },
   {
